Update 'u6rargli1-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:62e9d71b0bb96d174a849b47a461d89735b8384a@sha256:5fb8452e21ccdd684bc502e1e1d8c51d58b6cb41e369e06c66b55720c7e34ffa

--- a/components/u6rargli1-python/overlays/development/deployment-patch.yaml
+++ b/components/u6rargli1-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: u6rargli1-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:62e9d71b0bb96d174a849b47a461d89735b8384a@sha256:5fb8452e21ccdd684bc502e1e1d8c51d58b6cb41e369e06c66b55720c7e34ffa
+          name: container-image
